--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "doctrine/dbal": "~2.3"
     },
     "autoload": {
         "classmap": [
@@ -20,7 +21,11 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files":[
+            "app/Helpers/helpers.php"
+        ]
+
     },
     "autoload-dev": {
         "psr-4": {
